# component-parser

./: .gitignore  Cargo.toml  LICENSE  README.md  index.d.ts  index.js  package-lock.json  package.json  parser-mock.js
src/: lib.rs
src/parser/: css.rs  meta.rs  mod.rs  script.rs
test/: benchmark.js  parser-acorn.js  test.js
test/fixtures/: complex-component.js  complex-page.js  component.css  component.error-js  component.js  component.swan  error.js  guess-page.js  import.css  page.css  page.js
